Add zk voting, using Semaphore

--- a/src/content/MyFirstZKVote.mdx
+++ b/src/content/MyFirstZKVote.mdx
@@ -320,6 +320,8 @@ nullifier = Hash(identitySecret, electionId)
         - 具体是哪一个 `identitySecret` 参与了某次投票；
         - 某个真实世界身份在这场投票中选择了什么。
 
+<ZKChainVote />
+
 ## 七、安全性与局限性
 
 尽管 ZKVote 在隐私方面相对于普通链上投票有巨大改进，但依然需要关注若干安全假设与工程注意点。
