增加尾页,更改样式

--- a/src/content/MyFirstZKVote.mdx
+++ b/src/content/MyFirstZKVote.mdx
@@ -1,9 +1,3 @@
-{/*
-  MDX 中的 export 语句必须放在文件最顶部！
-  这样变量才能在整个文件中使用
-*/}
-export const author = "React 学习者";
-export const currentYear = 2025;
 
 # My First ZKVote：从链上投票到零知识证明
 
@@ -166,6 +160,13 @@ export const currentYear = 2025;
 />
 
 <ZKChainVote />
+
+<Card accent>
+    <p>
+        <strong>小提示：</strong>点击提交后你会看到一个“流程进度框”，从「准备数据 → 生成证明 → 提交交易 → 区块确认」逐步推进。
+        其中<strong>生成零知识证明</strong>是在浏览器本地完成的，时间会比普通交易更长一些（通常 2~5 秒，取决于设备性能）。
+    </p>
+</Card>
 
 ### 这一次ZK投票里做了什么
 
@@ -369,7 +370,81 @@ nullifier = Hash(identitySecret, electionId)
 - 如何防止一人多投；
 - 如何在不暴露身份的前提下，把「我参与过这次投票」这一事实公开记录在链上。
 
-## 六、你将收获什么？
+## 六、实战：提交交易后你能在链上看到什么？
+
+完成 ZK 投票后，你仍然会在区块浏览器里看到一笔<strong>来自你钱包地址</strong>的交易（from）。
+
+这点很重要：
+
+- **ZK 并不是“隐藏你发起了交易”**，而是隐藏“交易里与投票相关的私密信息”。
+- 换句话说，旁观者可以知道“这个地址发起了一次 ZKVote 合约调用”，但无法从 Input Data 还原出：
+    - 你在选民集合里的哪一个承诺；
+    - 你的身份秘密 `identitySecret`；
+    - 你具体选择了哪个选项（在本 Demo 里被承诺/证明保护）。
+
+你可以把它理解为：
+
+> **链上公开：我提交了一个“有效的证明”。
+> 链上不公开：我是谁、我投了什么。**
+
+### 6.1 如何读懂 Input Data（概念级）
+
+在交易详情中，你通常会看到类似以下几类字段（名称会随合约实现而不同）：
+
+- `proof`：零知识证明本体（例如 Groth16 的若干个字段）。
+- `root`：投票时使用的 Merkle 根（证明“我属于选民集合”的公共锚点）。
+- `nullifierHash` / `nullifier`：防重复投票标识（合约用它检查“一人一票”）。
+- `voteCommitment`（如果有）：对投票选择的承诺值，用于隐藏明文选择。
+
+<Card>
+    <p>
+        <strong>你可以做的独立验证：</strong>
+        你无法在链上解出选项，但你能检查<strong>交易成功</strong>、合约事件、以及 nullifier 是否被记录为已使用。
+        这就是“可审计 + 不泄露”的平衡点。
+    </p>
+</Card>
+
+### 6.2 从“进度弹窗”到源码：每一步对应哪里？
+
+1. **准备数据**：检查网络/钱包/选项，准备要喂给证明与合约的参数。
+2. **加入提案群组**：把 `identityCommitment` 写入链上（用于构建选民集合）。
+3. **同步成员**：获取/重建 Merkle Tree（在本 Demo 里是简化的步骤）。
+4. **生成零知识证明**：浏览器本地执行 proving，产出 `proof + nullifier`。
+5. **提交投票**：把 `publicInputs + proof` 发送到投票合约。
+6. **区块确认**：等待交易回执（receipt），确认链上验证通过。
+
+<Card>
+    <p>
+        <strong>为什么确认后会“覆盖掉投票选项”？</strong>
+        因为当交易确认成功后，页面会把“选项区域”替换成“交易信息面板”，让你立即看到可审计的链上结果（hash/from/to/input data）。
+        这也更符合 ZK 投票的核心叙事：<strong>隐私输入不公开，但结果与证明过程可验证</strong>。
+    </p>
+</Card>
+
+## 七、常见问题与排错（FAQ）
+
+### 7.1 为什么要先 join proposal？
+
+因为系统需要把你的身份承诺（identity commitment）加入“允许投票的集合”（Merkle 树）。
+不加入集合，就无法生成“我是成员”的证明。
+
+### 7.2 为什么生成 proof 会更慢？
+
+普通链上投票只是在钱包里签名并发送交易；
+而 ZK 投票需要在浏览器本地运行证明算法，做一段相对重的计算。
+
+### 7.3 交易发出后一直 pending 怎么办？
+
+- 先确认网络是 Sepolia，且钱包里有足够的测试币用于 Gas。
+- 如果网络拥堵，可以等待更久；或者在钱包里尝试加速/替换交易。
+
+### 7.4 proof 生成失败常见原因
+
+- 页面被刷新导致本地身份丢失；
+- 群组成员数据不同步；
+- 设备性能/内存不足导致计算异常。
+
+## 八、你将收获什么？
 
 完成 My First ZKVote 之后，你应当能够清晰地回答：
 
@@ -388,3 +463,6 @@ nullifier = Hash(identitySecret, electionId)
 - 将这里的简化 Demo 扩展为支持多选、加密计票或跨链治理的完整应用。
 
 欢迎你在完成本教程后，结合自己的场景，可以对 ZKVote 做更深度的改造与实验。
+
+---
+
