增加英文图片支持

--- a/src/content/MyFirstZKVote.en.mdx
+++ b/src/content/MyFirstZKVote.en.mdx
@@ -119,7 +119,7 @@ Any ZKP system should satisfy:
 - Choose an option and submit the vote
 
 <Figure
-  src="/ZK_1.png"
+  src="/ZK_1_en.png"
   alt="ZK voting UI overview"
   caption="UI overview: generate identity → join proposal → submit an anonymous vote."
 />
